# idiom-finder

./: .gitattributes  .gitignore  .isort.cfg  .pylintrc  Makefile  README.hf.md  README.md  app.py  huggingface.yml  pyproject.toml  pytest.ini  requirements.txt  run.py  spaces.yml  style.css
.github/workflows/: main.yml
data/: idiom-definition-context-short.json  idiom-definition-context.json  idioms-and-definitions.json
idiom_dataset/: chid_augmented.json  chid_idiom_reference.json  chid_missing.json  chid_valid.json
scripts/: add-chid-definitions.py  add-context-to-idioms.py  chid-dataset-processor.py  chid_idiom_reference_with_pinyin.json  embeddings-processor.py
src/: app.py  run.py  singletons.py
src/retrieval/: __init__.py  constants.py  embed_corpus.py  retriever.py
src/utils/: utils.py
src/verification/: verifier.py  wiktionary_client.py
tests/: conftest.py  test_retriever.py  test_utils.py  test_verifier_integration.py  test_verifier_unit.py
utils/: utils.py
