[project]
name = "chinese-idioms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=4.44.1",
    "pypinyin>=0.55.0",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
    "watchfiles>=1.1.0",
     "black>=25.1.0",
    "isort>=6.0.1",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
]
